--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "test": "test:jest",
+    "build": "tsc",
+    "test:jest": "jest --watch --passWithNoTests --updateSnapshot --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@tsconfig/node-lts": "^20.1.3",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.9",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "node-notifier": "^10.0.1",
+    "ts-jest": "^29.1.5",
     "typescript": "^5.5.3"
   }
 }
