check action trigger

--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -1,13 +1,13 @@
 name: Build, Lint, Test and Deploy co2m.js
 
-on:
-  push:
-    branches:
-      - "master"
-  pull_request:
-    branches:
-      - "master"
-
+#on:
+#  push:
+#    branches:
+#      - "master"
+#  pull_request:
+#    branches:
+#      - "master"
+on: push
 jobs:
   eslint:
     name: Check Syntax with ESLint
