fix deploy pipeline

--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -81,4 +81,4 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Run Tests Command (Jest-CI)
-        run: "coming soon"
+        run: echo 'coming soon'
