--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -14,9 +14,9 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [18.x, 20.x, 22.x]
     steps:
-      - name: Checkout code
+      - name: Checkout code style
         uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }} to check Lint
         uses: actions/setup-node@v4
@@ -26,22 +26,27 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install Dependencies
         run: npm ci
-
       - name: Run ESLint
-        run: echo 'npm run lint'
+        run: npx run lint
 
   buildDist:
     name: Build-to-JS
     needs: eslint
     runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x, 22.x]
+        arch:
+          - x64
+          - x86
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Use Node.js 18.x to run build dist
+      - name: Use Node.js 18.x to run build dist on ${{ matrix.arch }}
         uses: actions/setup-node@v4
         with:
           cache: "npm"
-          node-version: 18.x
+          node-version: ${{ matrix.node-version}}
       - name: Install dependencies
         run: npm ci
       - name: Run Build Dist
@@ -51,18 +56,22 @@ jobs:
     name: Run Tests
     needs: eslint
     runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x, 22.x]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Use Node.js 18x to run Tests
+      - name: Use Node.js ${{ matrix.node-version }} to run Tests Covering
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          always-auth: 'false'
+          node-version: ${{ matrix.node-version }}
           cache: "npm"
       - name: Install Dependencies
         run: npm ci
       - name: Run Tests Command (Jest-CI)
-        run: npm run test:jest
+        run: npm test
 
   deploy-lib-npm:
     name: Deploy library on npmjs.org
