--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -6,6 +6,8 @@ name: Build, Lint, Test and Deploy co2m.js
 #  pull_request:
 #    branches:
 #      - "master"
+env:
+  ENABLED_RUN: ${{ github.event_name == 'push' && github.actor.name != 'github-actions[bot]' }}
 on:
   push:
     branches:
@@ -19,6 +21,7 @@ jobs:
   eslint:
     name: Check Syntax with ESLint
     runs-on: ubuntu-22.04
+    if: github.event_name == 'push' && github.actor.name != 'github-actions[bot]'
     strategy:
       matrix:
         node-version: [18.x] #, 20.x, 22.x
@@ -37,6 +40,7 @@ jobs:
         run: npm run lint
 
   buildDist:
+    if: github.event_name == 'push' && github.actor.name != 'github-actions[bot]'
     name: Build-to-JS
     needs: [eslint, tests]
     runs-on: ubuntu-22.04
@@ -64,6 +68,7 @@ jobs:
           path: dist
           name: dist-artifact
   tests:
+    if: github.event_name == 'push' && github.actor.name != 'github-actions[bot]'
     name: Run Tests
     needs: eslint
     runs-on: ubuntu-22.04
@@ -85,15 +90,20 @@ jobs:
         run: npm test
 
   publish-lib-npmjs:
+    if: github.event_name == 'push' && github.actor.name != 'github-actions[bot]'
     name: Deploy library on npmjs.com
     needs:
       - tests
       - buildDist
     runs-on: ubuntu-22.04
-    if: github.event.pull_request == true && github.event.pull_request.base.ref == 'master'
+    # if: startsWith(github.ref, 'refs/tags/v') && github.ref_name == github.ref_name && github.event.ref.startsWith('refs/tags/')
+    # if: github.event.pull_request == true && github.event.pull_request.base.ref == 'master'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          fetch-depth: 0
       - name: Download Dist Artifact
         uses: actions/download-artifact@v4
         with:
@@ -111,12 +121,16 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_ORG_ACCESS_TOKEN }}
         run: |
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           curr_version=$(jq -r .version < package.json)
-          echo "The current version is $curr_version"
-          npm version patch
-          next_version=$(jq -r .version < package.json)
-          echo "The next version is $next_version"
+          echo "*****The current version is $curr_version*****"
+          next_version=$(npm version patch)
+          echo "*****The next version is $next_version*****"
           git add package.json
           git commit -m "Patching version to $next_version"
-          git push origin master
-          cd dist && npm publish
+      - name: Push the version change
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
