--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Run ESLint
-        run: npm run lint
+        run: |
+          npm run lint
 
   buildDist:
     if: github.event_name == 'push' && github.actor.name != 'github-actions[bot]'
@@ -89,8 +90,9 @@ jobs:
       - tests
       - buildDist
     runs-on: ubuntu-22.04
+    #if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
     # if: startsWith(github.ref, 'refs/tags/v') && github.ref_name == github.ref_name && github.event.ref.startsWith('refs/tags/')
-    if: github.event.pull_request == true && github.event.pull_request.base.ref == 'master'
+    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'master'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -109,14 +111,16 @@ jobs:
           node-version: 18.x
           cache: "npm"
       - name: Install Dependencies
-        run: npm ci
+        run: |
+          npm ci
+          echo '${{ github.event_name }} - ${{ github.ref }} - ${{ github.base_ref }} - ${{ github.actor.name }} - ${{ github.event.action }} - ${{ github.event.pull_request.merge }}'
+
       - name: Update package.json - patching version
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_ORG_ACCESS_TOKEN }}
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          printenv
           curr_version=$(jq -r .version < package.json)
           echo "*****The current version is $curr_version*****"
           next_version=$(npm version patch --no-commit-hooks --no-git-tag-version)
@@ -127,4 +131,4 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+          branch: master
