--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Run ESLint
         run: |
           npm run lint
+          echo '${{ github.event.pull_request.base.ref}} - ${{ github.event_name }} - ${{ github.ref }} - ${{ github.base_ref }} - ${{ github.actor.name }} - ${{ github.event.action }} - ${{ github.event.pull_request.merge }}'
 
   buildDist:
     if: github.event_name == 'push' && github.actor.name != 'github-actions[bot]'
@@ -92,7 +93,7 @@ jobs:
     runs-on: ubuntu-22.04
     #if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
     # if: startsWith(github.ref, 'refs/tags/v') && github.ref_name == github.ref_name && github.event.ref.startsWith('refs/tags/')
-    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'master'
+    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -113,7 +114,7 @@ jobs:
       - name: Install Dependencies
         run: |
           npm ci
-          echo '${{ github.event_name }} - ${{ github.ref }} - ${{ github.base_ref }} - ${{ github.actor.name }} - ${{ github.event.action }} - ${{ github.event.pull_request.merge }}'
+          echo '${{ github.event.pull_request.base.ref}} - ${{ github.event_name }} - ${{ github.ref }} - ${{ github.base_ref }} - ${{ github.actor.name }} - ${{ github.event.action }} - ${{ github.event.pull_request.merge }}'
 
       - name: Update package.json - patching version
         env:
