--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -10,7 +10,15 @@ on:
       - closed
     branches:
       - master
+# Later, in the jobs section of your actions.yml file.
 jobs:
+  if_merged:
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo "The PR was successfully merged."
+
   eslint:
     name: Check Syntax with ESLint
     runs-on: ubuntu-22.04
