--- a/package.json
+++ b/package.json
@@ -96,6 +96,6 @@
     "ts-jest": "^29.1.5",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "yargs-parser": ">=5.0.1"
+    "yargs-parser": "^19.0.4"
   }
 }
