--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Create release
         env:
           TAG_NAME: ${{ github.ref_name }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release create "$TAG_NAME" \
              --repo="$GITHUB_REPOSITORY" \
@@ -44,9 +44,7 @@ jobs:
           architecture: x64
           registry-url: 'https://registry.npmjs.org'
       - name: Run NPM Install
-        run: npm ci
-      - name: Run Build
-        run: npm run build
+        run: npm ci && npm run build
       - name: Publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
