--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Create release
         env:
           TAG_NAME: ${{ github.ref_name }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ github.token }}
         run: |
           gh release create "$TAG_NAME" \
              --repo="$GITHUB_REPOSITORY" \
@@ -49,5 +49,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
+          echo "$NODE_AUTH_TOKEN"
+          echo "$GH_TOKEN"
           cd dist
           npm publish
