--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "utils",
     "Throwable"
   ],
-  "homepage": "co2m-js.nivekaa.com",
+  "homepage": "https://github.com/nivekalara237/co2mjs",
   "bugs": {
     "email": "admin@nivekaa.com",
     "url": "https://github.com/nivekalara237/co2mjs/issues"
@@ -69,7 +69,7 @@
     "url": "nivekaa.com",
     "email": "admin@nivekaa.com"
   },
-  "license": "ISC",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@jest/globals": "^29.7.0",
