--- a/package.json
+++ b/package.json
@@ -70,12 +70,14 @@
     "email": "admin@nivekaa.com"
   },
   "license": "Apache-2.0",
+  "dependencies": {
+    "@types/node": "^20.14.9"
+  },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@jest/globals": "^29.7.0",
     "@tsconfig/node-lts": "^20.1.3",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.9",
     "esbuild": "^0.23.1",
     "esbuild-node-externals": "^1.14.0",
     "esbuild-plugin-copy": "^2.1.1",
