Add co2visualizer workflow

--- a/.github/workflows/s3-visualizer.yml
+++ b/.github/workflows/s3-visualizer.yml
@@ -11,8 +11,10 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
       - name: Run test
-        uses: actions/setup-node@v4
         run: npm ci && npm test
       #- name: Move File Unique Directory
       #  run: |
