--- a/.github/workflows/s3-visualizer.yml
+++ b/.github/workflows/s3-visualizer.yml
@@ -7,10 +7,6 @@ on:
       - Release
   workflow_dispatch:
     inputs:
-      tags-or-branch:
-        default: master
-        type: string
-        description: "Pick Tag of Branch to upload"
       environment:
         default: ENV
         type: environment
@@ -27,11 +23,10 @@ jobs:
         with:
           node-version: 18.x
       - name: Run test
-        run: npm ci && npm test
-      #- name: Move File Unique Directory
-      #  run: |
-      #    mkdir -p s3/co2visualizer/${{ github.ref_name }}
-      #    mv coverage/* s3/co2visualizer/${{ github.ref_name }}
+        run: |
+          npm ci && npm test
+          touch coverage/error.html
+          echo "<html><body> <h1 style='color: red'>Error - Something wrong</h1> </body></html>" > coverage/error.html
       - name: Upload Files to S3
         uses: shallwefootball/s3-upload-action@master
         id: S3
@@ -43,5 +38,4 @@ jobs:
           destination_dir: 'co2visualizer/${{ github.ref_name }}'
       - name: Display URL
         run: |
-          echo "${{ steps.S3.outputs.object_key }}"
-          echo "${{ secrets.VISUALIZER_URL }}/co2visualizer/${{ github.ref_name }}/index.html"
+          echo "${{ env.VISUALIZER_URL }}/${{ steps.S3.outputs.object_key }}/index.html"
