--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "co2m.js",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "",
   "main": "index.js",
   "types": "index.d.ts",
@@ -71,7 +71,8 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@types/node": "^20.14.9"
+    "@types/node": "^20.14.9",
+    "co2mjs-models": "^1.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
