--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -81,7 +81,7 @@ jobs:
     if: github.event_name == 'push' && github.actor.name != 'github-actions[bot]'
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    needs: [ tests ]
+    needs: [ eslint ]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
