[FIX] update StringUtils.concat(...) to avoid null and undefined entries and make it more safety

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "display": "Node LTS",
   "_version": "lts",
   "compilerOptions": {
+    "types": ["node","jest"],
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
