--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+        run: npx playwright install --with-deps && npx playwright install msedge-dev
       - name: Run Playwright tests
         run: npm run @web/test
       - uses: actions/upload-artifact@v4
