--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@jest/globals": "^29.7.0",
     "@tsconfig/node-lts": "^20.1.3",
     "@types/jest": "^29.5.12",
+    "@types/node": "^22.9.3",
     "@web/dev-server-esbuild": "^1.0.3",
     "@web/test-runner": "^0.19.0",
     "@web/test-runner-playwright": "^0.11.0",
